Implemented all js scripts

--- a/Radar.html
+++ b/Radar.html
@@ -80,7 +80,7 @@ var histOutputBinding = new Shiny.OutputBinding();
 	function radarSquareSizeGrid(){
 		
 		var svg = d3.select('#theRadar').append('svg')
-			.attr("style"," display:block; margin:auto; margin-top:30px;")
+			.attr("style"," display:block; margin:auto; margin-top:30px")
 			.attr({
 			width: w,
 			height: h
