Pie highlight all

--- a/graphs.html
+++ b/graphs.html
@@ -519,7 +519,6 @@ $.extend(theOutputBinding, {
     						.attr("stroke-width",2);
               });
               pieParts.on('mouseleave', function (d, i) {
-//                d3.select(this)
                 svg.selectAll("path.r"+i)
                   .transition()
       						.duration(50)
@@ -556,6 +555,9 @@ $.extend(theOutputBinding, {
     						.data(pie(arrayValues))
     						.enter()
     						.append('path')
+                .attr("class", function(d, i) { 
+              					return "r"+i;
+              	})
     						.attr('d', arc)
     						.attr('transform', 'translate(' + (array[p] * cellSize + cellSize/2) + ',' + (n * cellSize + cellSize/2) + ')')
     						.attr('fill', function(d, i) { 
@@ -585,16 +587,17 @@ $.extend(theOutputBinding, {
     								var ch=label[i]+": " + d.data.realValue;
     								return ch;	
     						}); 	
-    						d3.select(this)
-                .attr("stroke","white")
-                .transition()
-                .duration(50)
-                .attr("stroke-width",1);
+    						svg.selectAll("path.r"+i)
+                  .attr("stroke","white")
+                  .transition()
+                  .duration(50)
+                  .attr("stroke-width",2);
               });
               pieParts.on('mouseleave', function (d, i) {
-    						d3.select(this).transition()
-                .duration(50)
-                .attr("stroke","none");
+    						svg.selectAll("path.r"+i)
+      						.transition()
+                  .duration(50)
+                  .attr("stroke","none");
               });
             }
           } else if (plotType.localeCompare("Barplot")==0) {
@@ -1243,7 +1246,9 @@ $.extend(theOutputBinding, {
     					.data(pie(arrayValues))
     					.enter()
     					.append('path')
-    					.attr("class", "pie")
+              .attr("class", function(d, i) { 
+            					return "r"+i;
+            	})
     					.attr('d', arc)
     					.attr('transform', 'translate(' + (coordinatesArray[n].x) +',' + coordinatesArray[n].y + ')')
     					.attr('fill', function(d, i) {
@@ -1272,14 +1277,15 @@ $.extend(theOutputBinding, {
     						var ch=label[i]+": " + d.data.realValue;
     						return ch;	
     					});
-              d3.select(this)
+  						svg.selectAll("path.r"+i)
     						.attr("stroke","white")
     						.transition()
     						.duration(50)
-    						.attr("stroke-width",1);
+    						.attr("stroke-width",2);
     				});
             pieParts.on('mouseleave', function (d, i) {
-    					d3.select(this).transition()
+  						svg.selectAll("path.r"+i)
+    					  .transition()
     						.duration(50)
     						.attr("stroke","none");
     				});
