Added quality measures. New mulitplot variables default: all training vars.

--- a/graphs.html
+++ b/graphs.html
@@ -158,7 +158,7 @@ $.extend(theOutputBinding, {
     }
     
     // Star function
-    if(plotType.localeCompare("Star")==0) { 
+//    if(plotType.localeCompare("Star")==0) { 
       function StarChart(id, d, options) {
         var cfg = {
       	 radius: 5,
@@ -336,7 +336,7 @@ $.extend(theOutputBinding, {
       			   .style('font-family', 'sans-serif')
       			   .style('font-size', '13px');
       }
-    }
+    //}
   
 
     
